client/css/zz_loom.css
/* universal reset */
* {
  margin: 0;
  padding: 0;
  border: none;
}

/* Sticky footer styles
-------------------------------------------------- */
/*
html {
  position: relative;
  min-height: 100vh;
}
*/
/*
body {
  font-family: -apple-system, BlinkMacSystemFont,
    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
    "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
}*/

/*
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 60px;
  background-color: #f5f5f5;
}
*/


/* Custom page CSS
-------------------------------------------------- */
/* Not required for template or sticky footer method. */

/* default to nested flexboxes that fill everything evenly*/

/* aligns elements left-to-right */
.view {
  display: flex;
  flex-direction: row;
  flex: 1 1 auto;
}

.view.centered {
  justify-content: center;
  align-items: center;
}

/* aligns elements top-to-bottom */
.view-vertical {
  display: flex;
  flex-direction: column;
  flex: 1 1 auto;
}

.view-vertical.centered {
  justify-content: center;
  align-items: center;
}

.sidepanel {
  min-width: 300px;
  max-width: 300px;
  margin: 10px;
  flex: 1 1 auto;
}

code {
  font-size: 80%;
}

/* loom */

a {
  cursor: pointer;
}

.navbar-brand {
  cursor: default;
}

.selected {
  background-color: lightgray;
}

.no-line-space {
  line-height: 0px;
}

.weak {
  color: gray;
}

h1 {
  font-size: 1.7em;
  margin-top: 0.5em;
  margin-bottom: 0.83em;
  font-weight: bold;
}
h2 {
  font-size: 1.2em;
  margin-top: 0.5em;
  margin-bottom: 0.5em;
  padding-left: 16px;
  font-weight: bold;
  font-style: italic;
}
h3 {
  font-size: 1.2em;
  margin-top: 0.5em;
  margin-bottom: 0.5em;
  padding-left: 16px;
}

td {
  border-top-style: solid;
  border-top-width: thin;
  border-top-color: lightgray;
  font-size: 14px;
  margin: 0px;
  padding: 8px;
  vertical-align: top;
}

th {
  border-bottom-style: solid;
  border-bottom-width: thin;
  border-bottom-color: lightgray;
  font-size: 14px;
  margin: 0px;
  padding: 8px;
  vertical-align: top;
}

